--- a/src/main/resources/regression/car17v1.5.yaml
+++ b/src/main/resources/regression/car17v1.5.yaml
@@ -52,7 +52,7 @@ models:
     results:
       MAP:
         - 0.1295
-      recip_rank:
+      MRR:
         - 0.1923
   - name: bm25+ax
     display: +Ax
