--- a/src/main/resources/regression/msmarco-passage-doc2query.yaml
+++ b/src/main/resources/regression/msmarco-passage-doc2query.yaml
@@ -2,7 +2,7 @@
 corpus: msmarco-passage-doc2query
 corpus_path: collections/msmarco/passage-expanded-topk10
 
-index_path: indexes/lucene-index.msmarco-passage-doc2query.pos+docvectors+raw
+index_path: indexes/lucene-index.msmarco-passage-doc2query
 collection: JsonCollection
 generator: DefaultLuceneDocumentGenerator
 threads: 9
