--- a/src/main/resources/regression/msmarco-doc-docTTTTTquery-per-passage-v3.yaml
+++ b/src/main/resources/regression/msmarco-doc-docTTTTTquery-per-passage-v3.yaml
@@ -2,7 +2,7 @@
 corpus: msmarco-doc-docTTTTTquery-per-passage-v3
 corpus_path: collections/msmarco/doc-docTTTTTquery-per-passage-v3
 
-index_path: indexes/lucene-index.msmarco-doc-docTTTTTquery-per-passage-v3.pos+docvectors+raw
+index_path: indexes/lucene-index.msmarco-doc-docTTTTTquery-per-passage-v3
 collection: JsonCollection
 generator: DefaultLuceneDocumentGenerator
 threads: 16
