--- a/src/main/resources/regression/msmarco-doc-docTTTTTquery-per-passage.yaml
+++ b/src/main/resources/regression/msmarco-doc-docTTTTTquery-per-passage.yaml
@@ -2,7 +2,7 @@
 corpus: msmarco-doc-docTTTTTquery-per-passage
 corpus_path: collections/msmarco/doc-docTTTTTquery-per-passage
 
-index_path: indexes/lucene-index.msmarco-doc-docTTTTTquery-per-passage.pos+docvectors+raw
+index_path: indexes/lucene-index.msmarco-doc-docTTTTTquery-per-passage
 collection: JsonCollection
 generator: DefaultLuceneDocumentGenerator
 threads: 1
