--- a/src/main/resources/regression/msmarco-v2-doc-segmented.yaml
+++ b/src/main/resources/regression/msmarco-v2-doc-segmented.yaml
@@ -2,7 +2,7 @@
 corpus: msmarco-v2-doc-segmented
 corpus_path: collections/msmarco/msmarco_v2_doc_segmented
 
-index_path: indexes/lucene-index.msmarco-v2-doc-segmented.pos+docvectors+raw
+index_path: indexes/lucene-index.msmarco-v2-doc-segmented
 collection: MsMarcoV2DocCollection
 generator: DefaultLuceneDocumentGenerator
 threads: 18
