--- a/src/main/resources/regression/msmarco-v2-doc.yaml
+++ b/src/main/resources/regression/msmarco-v2-doc.yaml
@@ -2,7 +2,7 @@
 corpus: msmarco-v2-doc
 corpus_path: collections/msmarco/msmarco_v2_doc
 
-index_path: indexes/lucene-index.msmarco-v2-doc.pos+docvectors+raw
+index_path: indexes/lucene-index.msmarco-v2-doc
 collection: MsMarcoV2DocCollection
 generator: DefaultLuceneDocumentGenerator
 threads: 18
