--- a/src/main/resources/regression/msmarco-v2-passage-augmented.yaml
+++ b/src/main/resources/regression/msmarco-v2-passage-augmented.yaml
@@ -2,7 +2,7 @@
 corpus: msmarco-v2-passage-augmented
 corpus_path: collections/msmarco/msmarco_v2_passage_augmented
 
-index_path: indexes/lucene-index.msmarco-v2-passage-augmented.pos+docvectors+raw
+index_path: indexes/lucene-index.msmarco-v2-passage-augmented
 collection: MsMarcoV2PassageCollection
 generator: DefaultLuceneDocumentGenerator
 threads: 18
