--- a/src/main/resources/regression/msmarco-v2-passage.yaml
+++ b/src/main/resources/regression/msmarco-v2-passage.yaml
@@ -2,7 +2,7 @@
 corpus: msmarco-v2-passage
 corpus_path: collections/msmarco/msmarco_v2_passage
 
-index_path: indexes/lucene-index.msmarco-v2-passage.pos+docvectors+raw
+index_path: indexes/lucene-index.msmarco-v2-passage
 collection: MsMarcoV2PassageCollection
 generator: DefaultLuceneDocumentGenerator
 threads: 18
