--- a/src/main/resources/regression/msmarco-passage-doc2query.yaml
+++ b/src/main/resources/regression/msmarco-passage-doc2query.yaml
@@ -12,29 +12,25 @@ index_stats:
   documents (non-empty): 8841823
   total terms: 739691803
 
-search_command: target/appassembler/bin/SearchCollection
-topic_root: src/main/resources/topics-and-qrels/
-qrels_root: src/main/resources/topics-and-qrels/
-index_root:
-ranking_root:
-
-evals:
-  - command: tools/eval/trec_eval.9.0.4/trec_eval
+metrics:
+  - metric: MAP
+    command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -c -m map
     separator: "\t"
     parse_index: 2
-    metric: map
     metric_precision: 4
     can_combine: true
-  - command: tools/eval/trec_eval.9.0.4/trec_eval
+  - metric: R@1000
+    command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -c -m recall.1000
     separator: "\t"
     parse_index: 2
-    metric: R@1000
     metric_precision: 4
     can_combine: true
 
 topic_reader: TsvInt
+topic_root: src/main/resources/topics-and-qrels/
+qrels_root: src/main/resources/topics-and-qrels/
 topics:
   - name: "[MS MARCO Passage: Dev](https://github.com/microsoft/MSMARCO-Passage-Ranking)"
     id: dev
@@ -44,43 +40,33 @@ topics:
 models:
   - name: bm25-default
     display: BM25 (default)
-    params:
-      - -bm25
+    params: -bm25
     results:
-      map:
+      MAP:
         - 0.2270
       R@1000:
         - 0.8900
   - name: bm25-default+rm3
     display: +RM3
-    params:
-      - -bm25
-      - -rm3
+    params: -bm25 -rm3
     results:
-      map:
+      MAP:
         - 0.2028
       R@1000:
         - 0.8916
   - name: bm25-tuned
     display: BM25 (tuned)
-    params:
-      - -bm25
-      - -bm25.k1 0.82
-      - -bm25.b 0.68
+    params: -bm25 -bm25.k1 0.82 -bm25.b 0.68
     results:
-      map:
+      MAP:
         - 0.2293
       R@1000:
         - 0.8911
   - name: bm25-tuned+rm3
     display: +RM3
-    params:
-      - -bm25
-      - -bm25.k1 0.82
-      - -bm25.b 0.68
-      - -rm3
+    params: -bm25 -bm25.k1 0.82 -bm25.b 0.68 -rm3
     results:
-      map:
+      MAP:
         - 0.2077
       R@1000:
         - 0.8957
