--- a/src/main/resources/regression/msmarco-v2-passage-augmented.yaml
+++ b/src/main/resources/regression/msmarco-v2-passage-augmented.yaml
@@ -12,43 +12,39 @@ index_stats:
   documents (non-empty): 138364198
   total terms: 15272964956
 
-search_command: target/appassembler/bin/SearchCollection
-topic_root: src/main/resources/topics-and-qrels/
-qrels_root: src/main/resources/topics-and-qrels/
-index_root:
-ranking_root:
-
-evals:
-  - command: tools/eval/trec_eval.9.0.4/trec_eval
+metrics:
+  - metric: MAP@100
+    command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -c -M 100 -m map
     separator: "\t"
     parse_index: 2
-    metric: MAP
     metric_precision: 4
     can_combine: true
-  - command: tools/eval/trec_eval.9.0.4/trec_eval
+  - metric: MRR@100
+    command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -c -M 100 -m recip_rank
     separator: "\t"
     parse_index: 2
-    metric: MRR@100
     metric_precision: 4
     can_combine: true
-  - command: tools/eval/trec_eval.9.0.4/trec_eval
+  - metric: R@100
+    command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -c -m recall.100
     separator: "\t"
     parse_index: 2
-    metric: R@100
     metric_precision: 4
     can_combine: false
-  - command: tools/eval/trec_eval.9.0.4/trec_eval
+  - metric: R@1000
+    command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -c -m recall.1000
     separator: "\t"
     parse_index: 2
-    metric: R@1000
     metric_precision: 4
     can_combine: false
 
 topic_reader: TsvInt
+topic_root: src/main/resources/topics-and-qrels/
+qrels_root: src/main/resources/topics-and-qrels/
 topics:
   - name: "[MS MARCO V2 Passage: Dev](https://microsoft.github.io/msmarco/TREC-Deep-Learning.html)"
     id: dev
@@ -62,10 +58,9 @@ topics:
 models:
   - name: bm25-default
     display: BM25 (default)
-    params:
-      - -bm25
+    params: -bm25
     results:
-      MAP:
+      MAP@100:
         - 0.0863
         - 0.0904
       MRR@100:
@@ -79,11 +74,9 @@ models:
         - 0.6933
   - name: bm25-default+rm3
     display: +RM3
-    params:
-      - -bm25
-      - -rm3
+    params: -bm25 -rm3
     results:
-      MAP:
+      MAP@100:
         - 0.0669
         - 0.0692
       MRR@100:
@@ -97,13 +90,9 @@ models:
         - 0.6838
   - name: bm25-default+ax
     display: +Ax
-    params:
-      - -bm25
-      - -axiom
-      - -axiom.deterministic
-      - -rerankCutoff 20
+    params: -bm25 -axiom -axiom.deterministic -rerankCutoff 20
     results:
-      MAP:
+      MAP@100:
         - 0.0431
         - 0.0442
       MRR@100:
@@ -117,11 +106,9 @@ models:
         - 0.6043
   - name: bm25-default+prf
     display: +PRF
-    params:
-      - -bm25
-      - -bm25prf
+    params: -bm25 -bm25prf
     results:
-      MAP:
+      MAP@100:
         - 0.0542
         - 0.0563
       MRR@100:
