--- a/src/main/resources/regression/car17v2.0-doc2query.yaml
+++ b/src/main/resources/regression/car17v2.0-doc2query.yaml
@@ -3,9 +3,9 @@ corpus: car-paragraphCorpus.v2.0-doc2query
 corpus_path: collections/car/paragraphCorpus.v2.0-expanded-topk10/
 
 index_path: indexes/lucene-index.car-paragraphCorpus.v2.0-doc2query
-collection: JsonCollection
-generator: DefaultLuceneDocumentGenerator
-threads: 30
+collection_class: JsonCollection
+generator_class: DefaultLuceneDocumentGenerator
+index_threads: 30
 index_options: -storePositions -storeDocvectors -storeRaw
 index_stats:
   documents: 29794697
