--- a/src/main/resources/regression/backgroundlinking18.yaml
+++ b/src/main/resources/regression/backgroundlinking18.yaml
@@ -3,9 +3,9 @@ corpus: wapo.v2
 corpus_path: collections/newswire/WashingtonPost.v2/data/
 
 index_path: indexes/lucene-index.wapo.v2
-collection: WashingtonPostCollection
-generator: WashingtonPostGenerator
-threads: 1
+collection_class: WashingtonPostCollection
+generator_class: WashingtonPostGenerator
+index_threads: 1
 index_options: -storePositions -storeDocvectors -storeRaw
 index_stats:
   documents: 595031
