--- a/src/main/resources/regression/car17v2.0.yaml
+++ b/src/main/resources/regression/car17v2.0.yaml
@@ -3,9 +3,9 @@ corpus: car-paragraphCorpus.v2.0
 corpus_path: collections/car/paragraphCorpus.v2.0/
 
 index_path: indexes/lucene-index.car-paragraphCorpus.v2.0
-collection: CarCollection
-generator: DefaultLuceneDocumentGenerator
-threads: 1
+collection_class: CarCollection
+generator_class: DefaultLuceneDocumentGenerator
+index_threads: 1
 index_options: -storePositions -storeDocvectors -storeRaw
 index_stats:
   documents: 29794689
