--- a/src/main/resources/regression/disk12.yaml
+++ b/src/main/resources/regression/disk12.yaml
@@ -3,9 +3,9 @@ corpus: disk12
 corpus_path: collections/newswire/disk12/
 
 index_path: indexes/lucene-index.disk12
-collection: TrecCollection
-generator: DefaultLuceneDocumentGenerator
-threads: 16
+collection_class: TrecCollection
+generator_class: DefaultLuceneDocumentGenerator
+index_threads: 16
 index_options: -storePositions -storeDocvectors -storeRaw
 index_stats:
   documents: 741676
