--- a/src/main/resources/regression/fire12-bn.yaml
+++ b/src/main/resources/regression/fire12-bn.yaml
@@ -3,9 +3,9 @@ corpus: fire12-bn
 corpus_path: collections/fire/bengali/bn.docs.2012.19032012
 
 index_path: indexes/lucene-index.fire12-bn
-collection: CleanTrecCollection
-generator: DefaultLuceneDocumentGenerator
-threads: 16
+collection_class: CleanTrecCollection
+generator_class: DefaultLuceneDocumentGenerator
+index_threads: 16
 index_options: -storePositions -storeDocvectors -storeRaw -language bn
 index_stats:
   documents: 500122
