--- a/src/main/resources/regression/fire12-en.yaml
+++ b/src/main/resources/regression/fire12-en.yaml
@@ -3,9 +3,9 @@ corpus: fire12-en
 corpus_path: collections/fire/english/en.docs.2011
 
 index_path: indexes/lucene-index.fire12-en
-collection: CleanTrecCollection
-generator: DefaultLuceneDocumentGenerator
-threads: 16
+collection_class: CleanTrecCollection
+generator_class: DefaultLuceneDocumentGenerator
+index_threads: 16
 index_options: -storePositions -storeDocvectors -storeRaw -language en
 index_stats:
   documents: 392577
