--- a/src/main/resources/regression/fire12-hi.yaml
+++ b/src/main/resources/regression/fire12-hi.yaml
@@ -3,9 +3,9 @@ corpus: fire12-hi
 corpus_path: collections/fire/hindi/hi.docs.2011
 
 index_path: indexes/lucene-index.fire12-hi
-collection: CleanTrecCollection
-generator: DefaultLuceneDocumentGenerator
-threads: 16
+collection_class: CleanTrecCollection
+generator_class: DefaultLuceneDocumentGenerator
+index_threads: 16
 index_options: -storePositions -storeDocvectors -storeRaw -language hi
 index_stats:
   documents: 331599
