--- a/src/main/resources/regression/mb11.yaml
+++ b/src/main/resources/regression/mb11.yaml
@@ -3,9 +3,9 @@ corpus: mb11
 corpus_path: collections/twitter/Tweets2011-corpus/json.gold/
 
 index_path: indexes/lucene-index.mb11
-collection: TweetCollection
-threads: 44
-generator: TweetGenerator
+collection_class: TweetCollection
+generator_class: TweetGenerator
+index_threads: 44
 index_options: -storePositions -storeDocvectors -storeRaw -uniqueDocid -tweet.keepUrls -tweet.stemming
 index_stats:
   documents: 14950477
