--- a/src/main/resources/regression/mb13.yaml
+++ b/src/main/resources/regression/mb13.yaml
@@ -3,9 +3,9 @@ corpus: mb13
 corpus_path: collections/twitter/Tweets2013-corpus/data/
 
 index_path: indexes/lucene-index.mb13
-collection: TweetCollection
-threads: 44
-generator: TweetGenerator
+collection_class: TweetCollection
+generator_class: TweetGenerator
+index_threads: 44
 index_options: -storePositions -storeDocvectors -storeRaw -uniqueDocid -optimize -tweet.keepUrls -tweet.stemming
 index_stats:
   documents: 203145916
