--- a/src/main/resources/regression/mrtydi-v1.1-fi.yaml
+++ b/src/main/resources/regression/mrtydi-v1.1-fi.yaml
@@ -3,9 +3,9 @@ corpus: mrtydi-v1.1-fi
 corpus_path: collections/mr-tydi-corpus/mrtydi-v1.1-finnish
 
 index_path: indexes/lucene-index.mrtydi-v1.1-finnish
-collection: MrTyDiCollection
-generator: DefaultLuceneDocumentGenerator
-threads: 1
+collection_class: MrTyDiCollection
+generator_class: DefaultLuceneDocumentGenerator
+index_threads: 1
 index_options: -storePositions -storeDocvectors -storeRaw -language fi
 index_stats:
   documents: 1908757
