--- a/src/main/resources/regression/mrtydi-v1.1-id.yaml
+++ b/src/main/resources/regression/mrtydi-v1.1-id.yaml
@@ -3,9 +3,9 @@ corpus: mrtydi-v1.1-id
 corpus_path: collections/mr-tydi-corpus/mrtydi-v1.1-indonesian
 
 index_path: indexes/lucene-index.mrtydi-v1.1-indonesian
-collection: MrTyDiCollection
-generator: DefaultLuceneDocumentGenerator
-threads: 1
+collection_class: MrTyDiCollection
+generator_class: DefaultLuceneDocumentGenerator
+index_threads: 1
 index_options: -storePositions -storeDocvectors -storeRaw -language id
 index_stats:
   documents: 1469399
