--- a/src/main/resources/regression/mrtydi-v1.1-ja.yaml
+++ b/src/main/resources/regression/mrtydi-v1.1-ja.yaml
@@ -3,9 +3,9 @@ corpus: mrtydi-v1.1-ja
 corpus_path: collections/mr-tydi-corpus/mrtydi-v1.1-japanese
 
 index_path: indexes/lucene-index.mrtydi-v1.1-japanese
-collection: MrTyDiCollection
-generator: DefaultLuceneDocumentGenerator
-threads: 1
+collection_class: MrTyDiCollection
+generator_class: DefaultLuceneDocumentGenerator
+index_threads: 1
 index_options: -storePositions -storeDocvectors -storeRaw -language ja
 index_stats:
   documents: 7000027
