--- a/src/main/resources/regression/mrtydi-v1.1-ru.yaml
+++ b/src/main/resources/regression/mrtydi-v1.1-ru.yaml
@@ -3,9 +3,9 @@ corpus: mrtydi-v1.1-ru
 corpus_path: collections/mr-tydi-corpus/mrtydi-v1.1-russian
 
 index_path: indexes/lucene-index.mrtydi-v1.1-russian
-collection: MrTyDiCollection
-generator: DefaultLuceneDocumentGenerator
-threads: 1
+collection_class: MrTyDiCollection
+generator_class: DefaultLuceneDocumentGenerator
+index_threads: 1
 index_options: -storePositions -storeDocvectors -storeRaw -language ru
 index_stats:
   documents: 9597504
