--- a/src/main/resources/regression/msmarco-doc-docTTTTTquery-per-passage.yaml
+++ b/src/main/resources/regression/msmarco-doc-docTTTTTquery-per-passage.yaml
@@ -3,9 +3,9 @@ corpus: msmarco-doc-docTTTTTquery-per-passage
 corpus_path: collections/msmarco/doc-docTTTTTquery-per-passage
 
 index_path: indexes/lucene-index.msmarco-doc-docTTTTTquery-per-passage
-collection: JsonCollection
-generator: DefaultLuceneDocumentGenerator
-threads: 1
+collection_class: JsonCollection
+generator_class: DefaultLuceneDocumentGenerator
+index_threads: 1
 index_options: -storePositions -storeDocvectors -storeRaw
 index_stats:
   documents: 20544550
