--- a/src/main/resources/regression/msmarco-doc-per-passage-v3.yaml
+++ b/src/main/resources/regression/msmarco-doc-per-passage-v3.yaml
@@ -3,9 +3,9 @@ corpus: msmarco-doc-per-passage-v3
 corpus_path: collections/msmarco/doc-per-passage-v3/
 
 index_path: indexes/lucene-index.msmarco-doc-per-passage-v3
-collection: JsonCollection
-generator: DefaultLuceneDocumentGenerator
-threads: 16
+collection_class: JsonCollection
+generator_class: DefaultLuceneDocumentGenerator
+index_threads: 16
 index_options: -storePositions -storeDocvectors -storeRaw
 index_stats:
   documents: 20545677
