--- a/src/main/resources/regression/msmarco-passage-docTTTTTquery.yaml
+++ b/src/main/resources/regression/msmarco-passage-docTTTTTquery.yaml
@@ -3,9 +3,9 @@ corpus: msmarco-passage-docTTTTTquery
 corpus_path: collections/msmarco/passage-docTTTTTquery
 
 index_path: indexes/lucene-index.msmarco-passage-docTTTTTquery
-collection: JsonCollection
-generator: DefaultLuceneDocumentGenerator
-threads: 9
+collection_class: JsonCollection
+generator_class: DefaultLuceneDocumentGenerator
+index_threads: 9
 index_options: -storePositions -storeDocvectors -storeRaw
 index_stats:
   documents: 8841823
