--- a/src/main/resources/regression/msmarco-passage-unicoil-tilde-expansion.yaml
+++ b/src/main/resources/regression/msmarco-passage-unicoil-tilde-expansion.yaml
@@ -3,9 +3,9 @@ corpus: msmarco-passage-unicoil-tilde-expansion
 corpus_path: collections/msmarco/msmarco-passage-unicoil-tilde-expansion-b8/
 
 index_path: indexes/lucene-index.msmarco-passage-unicoil-tilde-expansion
-collection: JsonVectorCollection
-generator: DefaultLuceneDocumentGenerator
-threads: 16
+collection_class: JsonVectorCollection
+generator_class: DefaultLuceneDocumentGenerator
+index_threads: 16
 index_options: -impact -pretokenized
 index_stats:
   documents: 8841823
