--- a/src/main/resources/regression/msmarco-v2-doc-segmented.yaml
+++ b/src/main/resources/regression/msmarco-v2-doc-segmented.yaml
@@ -3,9 +3,9 @@ corpus: msmarco-v2-doc-segmented
 corpus_path: collections/msmarco/msmarco_v2_doc_segmented
 
 index_path: indexes/lucene-index.msmarco-v2-doc-segmented
-collection: MsMarcoV2DocCollection
-generator: DefaultLuceneDocumentGenerator
-threads: 18
+collection_class: MsMarcoV2DocCollection
+generator_class: DefaultLuceneDocumentGenerator
+index_threads: 18
 index_options: -storePositions -storeDocvectors -storeRaw
 index_stats:
   documents: 124131414
