--- a/src/main/resources/regression/msmarco-v2-doc.yaml
+++ b/src/main/resources/regression/msmarco-v2-doc.yaml
@@ -3,9 +3,9 @@ corpus: msmarco-v2-doc
 corpus_path: collections/msmarco/msmarco_v2_doc
 
 index_path: indexes/lucene-index.msmarco-v2-doc
-collection: MsMarcoV2DocCollection
-generator: DefaultLuceneDocumentGenerator
-threads: 18
+collection_class: MsMarcoV2DocCollection
+generator_class: DefaultLuceneDocumentGenerator
+index_threads: 18
 index_options: -storePositions -storeDocvectors -storeRaw
 index_stats:
   documents: 11959635
