--- a/src/main/resources/regression/msmarco-v2-passage.yaml
+++ b/src/main/resources/regression/msmarco-v2-passage.yaml
@@ -3,9 +3,9 @@ corpus: msmarco-v2-passage
 corpus_path: collections/msmarco/msmarco_v2_passage
 
 index_path: indexes/lucene-index.msmarco-v2-passage
-collection: MsMarcoV2PassageCollection
-generator: DefaultLuceneDocumentGenerator
-threads: 18
+collection_class: MsMarcoV2PassageCollection
+generator_class: DefaultLuceneDocumentGenerator
+index_threads: 18
 index_options: -storePositions -storeDocvectors -storeRaw
 index_stats:
   documents: 138364198
