--- a/src/main/resources/regression/robust05.yaml
+++ b/src/main/resources/regression/robust05.yaml
@@ -3,9 +3,9 @@ corpus: robust05
 corpus_path: collections/newswire/AQUAINT/
 
 index_path: indexes/lucene-index.robust05
-collection: TrecCollection
-generator: DefaultLuceneDocumentGenerator
-threads: 16
+collection_class: TrecCollection
+generator_class: DefaultLuceneDocumentGenerator
+index_threads: 16
 index_options: -storePositions -storeDocvectors -storeRaw
 index_stats:
   documents: 1031455
