More doc tweaks.

--- a/src/main/resources/docgen/templates/mrtydi-v1.1-sw.template
+++ b/src/main/resources/docgen/templates/mrtydi-v1.1-sw.template
@@ -1,6 +1,6 @@
-# Anserini: Regressions for [Mr. TyDi (Swahili)](https://github.com/castorini/mr.tydi)
+# Anserini: Regressions for [Mr. TyDi (v1.1) &mdash; Swahili](https://github.com/castorini/mr.tydi)
 
-This page documents regression experiments for [Mr. TyDi (Swahili)](https://github.com/castorini/mr.tydi).
+This page documents regression experiments for [Mr. TyDi (v1.1) &mdash; Swahili](https://github.com/castorini/mr.tydi).
 
 The exact configurations for these regressions are stored in [this YAML file](${yaml}).
 Note that this page is automatically generated from [this template](${template}) as part of Anserini's regression pipeline, so do not modify this page directly; modify the template instead.
