--- a/src/main/resources/regression/fire12-en.yaml
+++ b/src/main/resources/regression/fire12-en.yaml
@@ -1,6 +1,6 @@
 ---
 corpus: fire12-en
-corpus_path: collections/fire/english/en.docs.2011
+corpus_path: collections/fire/english/en.docs.2011/
 
 index_path: indexes/lucene-index.fire12-en
 collection_class: CleanTrecCollection
