--- a/src/main/resources/regression/fire12-bn.yaml
+++ b/src/main/resources/regression/fire12-bn.yaml
@@ -1,6 +1,6 @@
 ---
 corpus: fire12-bn
-corpus_path: collections/fire/bengali/bn.docs.2012.19032012
+corpus_path: collections/fire/bengali/bn.docs.2012.19032012/
 
 index_path: indexes/lucene-index.fire12-bn
 collection_class: CleanTrecCollection
