--- a/src/main/resources/regression/fire12-hi.yaml
+++ b/src/main/resources/regression/fire12-hi.yaml
@@ -1,6 +1,6 @@
 ---
 corpus: fire12-hi
-corpus_path: collections/fire/hindi/hi.docs.2011
+corpus_path: collections/fire/hindi/hi.docs.2011/
 
 index_path: indexes/lucene-index.fire12-hi
 collection_class: CleanTrecCollection
