--- a/src/main/resources/regression/mrtydi-v1.1-fi.yaml
+++ b/src/main/resources/regression/mrtydi-v1.1-fi.yaml
@@ -1,6 +1,6 @@
 ---
 corpus: mrtydi-v1.1-fi
-corpus_path: collections/mr-tydi-corpus/mrtydi-v1.1-finnish
+corpus_path: collections/mr-tydi-corpus/mrtydi-v1.1-finnish/
 
 index_path: indexes/lucene-index.mrtydi-v1.1-finnish
 collection_class: MrTyDiCollection
