--- a/src/main/resources/regression/mrtydi-v1.1-ja.yaml
+++ b/src/main/resources/regression/mrtydi-v1.1-ja.yaml
@@ -1,6 +1,6 @@
 ---
 corpus: mrtydi-v1.1-ja
-corpus_path: collections/mr-tydi-corpus/mrtydi-v1.1-japanese
+corpus_path: collections/mr-tydi-corpus/mrtydi-v1.1-japanese/
 
 index_path: indexes/lucene-index.mrtydi-v1.1-japanese
 collection_class: MrTyDiCollection
