--- a/src/main/resources/regression/mrtydi-v1.1-sw.yaml
+++ b/src/main/resources/regression/mrtydi-v1.1-sw.yaml
@@ -1,6 +1,6 @@
 ---
 corpus: mrtydi-v1.1-sw
-corpus_path: collections/mr-tydi-corpus/mrtydi-v1.1-swahili
+corpus_path: collections/mr-tydi-corpus/mrtydi-v1.1-swahili/
 
 index_path: indexes/lucene-index.mrtydi-v1.1-swahili
 collection_class: MrTyDiCollection
