--- a/src/main/resources/regression/dl19-doc-segmented.yaml
+++ b/src/main/resources/regression/dl19-doc-segmented.yaml
@@ -1,16 +1,16 @@
 ---
-corpus: msmarco-doc-per-passage
+corpus: msmarco-doc-segmented
 corpus_path: collections/msmarco/msmarco-doc-segmented/
 
-index_path: indexes/lucene-index.msmarco-doc-segmented
+index_path: indexes/lucene-index.msmarco-doc-segmented/
 collection_class: JsonCollection
 generator_class: DefaultLuceneDocumentGenerator
-index_threads: 1
+index_threads: 16
 index_options: -storePositions -storeDocvectors -storeRaw
 index_stats:
-  documents: 20544550
-  documents (non-empty): 20544550
-  total terms: 3197886407
+  documents: 20545677
+  documents (non-empty): 20545677
+  total terms: 3200515914
 
 metrics:
   - metric: MAP
@@ -50,9 +50,9 @@ models:
     params: -bm25 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
     results:
       MAP:
-        - 0.2441
+        - 0.2449
       nDCG@10:
-        - 0.5276
+        - 0.5302
       R@100:
         - 0.3840
   - name: bm25-default+rm3
@@ -60,39 +60,39 @@ models:
     params: -bm25 -rm3 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
     results:
       MAP:
-        - 0.2880
+        - 0.2884
       nDCG@10:
-        - 0.5750
+        - 0.5764
       R@100:
-        - 0.4356
+        - 0.4355
   - name: bm25-default+ax
     display: +Ax
     params: -bm25 -axiom -axiom.deterministic -rerankCutoff 20 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
     results:
       MAP:
-        - 0.3015
+        - 0.2981
       nDCG@10:
-        - 0.5590
+        - 0.5556
       R@100:
-        - 0.4501
+        - 0.4490
   - name: bm25-default+prf
     display: +PRF
     params: -bm25 -bm25prf -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
     results:
       MAP:
-        - 0.2821
+        - 0.2827
       nDCG@10:
-        - 0.5591
+        - 0.5599
       R@100:
-        - 0.4477
+        - 0.4476
   - name: bm25-tuned
     display: BM25 (tuned)
     params: -bm25 -bm25.k1 2.16 -bm25.b 0.61 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
     results:
       MAP:
-        - 0.2394
+        - 0.2398
       nDCG@10:
-        - 0.5364
+        - 0.5389
       R@100:
         - 0.3903
   - name: bm25-tuned+rm3
@@ -100,28 +100,28 @@ models:
     params: -bm25 -bm25.k1 2.16 -bm25.b 0.61 -rm3 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
     results:
       MAP:
-        - 0.2656
+        - 0.2658
       nDCG@10:
-        - 0.5379
+        - 0.5405
       R@100:
-        - 0.4126
+        - 0.4133
   - name: bm25-tuned+ax
     display: +Ax
     params: -bm25 -bm25.k1 2.16 -bm25.b 0.61 -axiom -axiom.deterministic -rerankCutoff 20 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
     results:
       MAP:
-        - 0.2934
+        - 0.2975
       nDCG@10:
-        - 0.5546
+        - 0.5574
       R@100:
-        - 0.4437
+        - 0.4491
   - name: bm25-tuned+prf
     display: +PRF
     params: -bm25 -bm25.k1 2.16 -bm25.b 0.61 -bm25prf -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
     results:
       MAP:
-        - 0.2838
+        - 0.2828
       nDCG@10:
-        - 0.5478
+        - 0.5476
       R@100:
-        - 0.4362
+        - 0.4361
