--- a/src/main/resources/regression/dl20-doc-segmented.yaml
+++ b/src/main/resources/regression/dl20-doc-segmented.yaml
@@ -1,16 +1,16 @@
 ---
-corpus: msmarco-doc-per-passage
+corpus: msmarco-doc-segmented
 corpus_path: collections/msmarco/msmarco-doc-segmented/
 
-index_path: indexes/lucene-index.msmarco-doc-segmented
+index_path: indexes/lucene-index.msmarco-doc-segmented/
 collection_class: JsonCollection
 generator_class: DefaultLuceneDocumentGenerator
-index_threads: 1
+index_threads: 16
 index_options: -storePositions -storeDocvectors -storeRaw
 index_stats:
-  documents: 20544550
-  documents (non-empty): 20544550
-  total terms: 3197886407
+  documents: 20545677
+  documents (non-empty): 20545677
+  total terms: 3200515914
 
 metrics:
   - metric: MAP
@@ -57,9 +57,9 @@ models:
     params: -bm25 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
     results:
       MAP:
-        - 0.3584
+        - 0.3586
       nDCG@10:
-        - 0.5271
+        - 0.5281
       MRR:
         - 0.8479
       R@100:
@@ -69,9 +69,9 @@ models:
     params: -bm25 -rm3 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
     results:
       MAP:
-        - 0.3769
+        - 0.3774
       nDCG@10:
-        - 0.5159
+        - 0.5179
       MRR:
         - 0.8136
       R@100:
@@ -81,70 +81,70 @@ models:
     params: -bm25 -axiom -axiom.deterministic -rerankCutoff 20 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
     results:
       MAP:
-        - 0.3854
+        - 0.3868
       nDCG@10:
-        - 0.5250
+        - 0.5227
       MRR:
-        - 0.8123
+        - 0.8028
       R@100:
-        - 0.6332
+        - 0.6362
   - name: bm25-default+prf
     display: +PRF
     params: -bm25 -bm25prf -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
     results:
       MAP:
-        - 0.3672
+        - 0.3686
       nDCG@10:
-        - 0.5217
+        - 0.5238
       MRR:
         - 0.7911
       R@100:
-        - 0.5994
+        - 0.6012
   - name: bm25-tuned
     display: BM25 (tuned)
     params: -bm25 -bm25.k1 2.16 -bm25.b 0.61 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
     results:
       MAP:
-        - 0.3456
+        - 0.3458
       nDCG@10:
         - 0.5213
       MRR:
         - 0.8684
       R@100:
-        - 0.5715
+        - 0.5723
   - name: bm25-tuned+rm3
     display: +RM3
     params: -bm25 -bm25.k1 2.16 -bm25.b 0.61 -rm3 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
     results:
       MAP:
-        - 0.3471
+        - 0.3472
       nDCG@10:
-        - 0.4983
+        - 0.4979
       MRR:
         - 0.7807
       R@100:
-        - 0.6013
+        - 0.6025
   - name: bm25-tuned+ax
     display: +Ax
     params: -bm25 -bm25.k1 2.16 -bm25.b 0.61 -axiom -axiom.deterministic -rerankCutoff 20 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
     results:
       MAP:
-        - 0.3495
+        - 0.3486
       nDCG@10:
-        - 0.4942
+        - 0.4948
       MRR:
-        - 0.8102
+        - 0.8019
       R@100:
-        - 0.6086
+        - 0.6114
   - name: bm25-tuned+prf
     display: +PRF
     params: -bm25 -bm25.k1 2.16 -bm25.b 0.61 -bm25prf -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
     results:
       MAP:
-        - 0.3629
+        - 0.3627
       nDCG@10:
-        - 0.5260
+        - 0.5251
       MRR:
         - 0.8478
       R@100:
-        - 0.6064
+        - 0.6048
