--- a/src/main/resources/regression/fever.yaml
+++ b/src/main/resources/regression/fever.yaml
@@ -2,7 +2,7 @@
 corpus: fever
 corpus_path: collections/fever/wiki-pages/
 
-index_path: indexes/lucene-index.fever-paragraph
+index_path: indexes/lucene-index.fever-paragraph/
 collection_class: FeverParagraphCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 1
