--- a/src/main/resources/regression/mrtydi-v1.1-bn.yaml
+++ b/src/main/resources/regression/mrtydi-v1.1-bn.yaml
@@ -2,7 +2,7 @@
 corpus: mrtydi-v1.1-bn
 corpus_path: collections/mr-tydi-corpus/mrtydi-v1.1-bengali/
 
-index_path: indexes/lucene-index.mrtydi-v1.1-bengali
+index_path: indexes/lucene-index.mrtydi-v1.1-bengali/
 collection_class: MrTyDiCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 1
