--- a/src/main/resources/regression/mrtydi-v1.1-en.yaml
+++ b/src/main/resources/regression/mrtydi-v1.1-en.yaml
@@ -2,7 +2,7 @@
 corpus: mrtydi-v1.1-en
 corpus_path: collections/mr-tydi-corpus/mrtydi-v1.1-english/
 
-index_path: indexes/lucene-index.mrtydi-v1.1-english
+index_path: indexes/lucene-index.mrtydi-v1.1-english/
 collection_class: MrTyDiCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 1
