--- a/src/main/resources/regression/mrtydi-v1.1-id.yaml
+++ b/src/main/resources/regression/mrtydi-v1.1-id.yaml
@@ -2,7 +2,7 @@
 corpus: mrtydi-v1.1-id
 corpus_path: collections/mr-tydi-corpus/mrtydi-v1.1-indonesian/
 
-index_path: indexes/lucene-index.mrtydi-v1.1-indonesian
+index_path: indexes/lucene-index.mrtydi-v1.1-indonesian/
 collection_class: MrTyDiCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 1
