--- a/src/main/resources/regression/mrtydi-v1.1-te.yaml
+++ b/src/main/resources/regression/mrtydi-v1.1-te.yaml
@@ -2,7 +2,7 @@
 corpus: mrtydi-v1.1-te
 corpus_path: collections/mr-tydi-corpus/mrtydi-v1.1-telugu/
 
-index_path: indexes/lucene-index.mrtydi-v1.1-telugu
+index_path: indexes/lucene-index.mrtydi-v1.1-telugu/
 collection_class: MrTyDiCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 1
