--- a/src/main/resources/regression/mrtydi-v1.1-th.yaml
+++ b/src/main/resources/regression/mrtydi-v1.1-th.yaml
@@ -2,7 +2,7 @@
 corpus: mrtydi-v1.1-th
 corpus_path: collections/mr-tydi-corpus/mrtydi-v1.1-thai/
 
-index_path: indexes/lucene-index.mrtydi-v1.1-thai
+index_path: indexes/lucene-index.mrtydi-v1.1-thai/
 collection_class: MrTyDiCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 1
