--- a/src/main/resources/docgen/templates/dl21-doc-d2q-t5.template
+++ b/src/main/resources/docgen/templates/dl21-doc-d2q-t5.template
@@ -1,13 +1,18 @@
-# Anserini: Regressions for [DL21 (Passage)](https://microsoft.github.io/msmarco/TREC-Deep-Learning.html)
+# Anserini: Regressions for [DL21 (Doc)](https://microsoft.github.io/msmarco/TREC-Deep-Learning.html)
 
-This page describes baseline experiments, integrated into Anserini's regression testing framework, for the TREC 2021 Deep Learning Track (Passage Ranking Task) on the MS MARCO V2 _augmented_ passage collection using relevance judgments from NIST.
+This page describes experiments, integrated into Anserini's regression testing framework, for the TREC 2021 Deep Learning Track (Document Ranking Task) on the MS MARCO V2 document collection (with doc2query-T5 expansions) using relevance judgments from NIST.
 
 At the time this regression was created (November 2021), the qrels are only available to TREC participants.
-You must download the qrels from NIST's "active participants" password-protected site and place at `src/main/resources/topics-and-qrels/qrels.dl21-passage.txt`.
+You must download the qrels from NIST's "active participants" password-protected site and place at `src/main/resources/topics-and-qrels/qrels.dl21-doc.txt`.
 The qrels will be added to Anserini when they are publicly released in Spring 2022.
 
-Note that the NIST relevance judgments provide far more relevant passages per topic, unlike the "sparse" judgments provided by Microsoft (these are sometimes called "dense" judgments to emphasize this contrast).
-For additional instructions on working with MS MARCO V2 passage collection, refer to [this page](experiments-msmarco-v2.md).
+Note that the NIST relevance judgments provide far more relevant documents per topic, unlike the "sparse" judgments provided by Microsoft (these are sometimes called "dense" judgments to emphasize this contrast).
+For additional instructions on working with MS MARCO V2 document collection, refer to [this page](experiments-msmarco-v2.md).
+
+Note that there are four different regression conditions for this task, and this page describes the following:
+
++ **Indexing Condition:** each document in the MS MARCO V2 document collection is treated as a unit of indexing
++ **Expansion Condition:** doc2query-T5
 
 The exact configurations for these regressions are stored in [this YAML file](${yaml}).
 Note that this page is automatically generated from [this template](${template}) as part of Anserini's regression pipeline, so do not modify this page directly; modify the template instead.
@@ -28,7 +33,7 @@ For additional details, see explanation of [common indexing options](common-inde
 ## Retrieval
 
 Topics and qrels are stored in [`src/main/resources/topics-and-qrels/`](../src/main/resources/topics-and-qrels/).
-The regression experiments here evaluate on the 53 topics for which NIST has provided judgments as part of the TREC 2021 Deep Learning Track.
+The regression experiments here evaluate on the 57 topics for which NIST has provided judgments as part of the TREC 2021 Deep Learning Track.
 <!-- The original data can be found [here](https://trec.nist.gov/data/deep2021.html). -->
 
 After indexing has completed, you should be able to perform retrieval as follows:
@@ -51,5 +56,5 @@ ${effectiveness}
 
 Some of these regressions correspond to official TREC 2021 Deep Learning Track "baseline" submissions:
 
-+ `paug_bm25` = BM25 (default), `k1=0.9`, `b=0.4`
-+ `paug_bm25rm3` = BM25 (default) + RM3, `k1=0.9`, `b=0.4`
++ `d_bm25` = BM25 (default), `k1=0.9`, `b=0.4`
++ `d_bm25rm3` = BM25 (default) + RM3, `k1=0.9`, `b=0.4`
