Complete MS MARCO V2 uniCOIL experiments

--- a/src/main/resources/regression/msmarco-v2-passage-unicoil-0shot.yaml
+++ b/src/main/resources/regression/msmarco-v2-passage-unicoil-0shot.yaml
@@ -1,16 +1,16 @@
 ---
-corpus: msmarco-v2-doc-segmented-unicoil-noexp-0shot
-corpus_path: collections/msmarco/msmarco_v2_doc_segmented_unicoil_noexp_0shot/
+corpus: msmarco-v2-passage-unicoil-0shot
+corpus_path: collections/msmarco/msmarco_v2_passage_unicoil_0shot/
 
-index_path: indexes/lucene-index.msmarco-v2-doc-segmented-unicoil-noexp-0shot/
+index_path: indexes/lucene-index.msmarco-v2-passage-unicoil-0shot/
 collection_class: JsonVectorCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 18
 index_options: -impact -pretokenized
 index_stats:
-  documents: 124131404
-  documents (non-empty): 124131404
-  total terms: 805830282591
+  documents: 138364198
+  documents (non-empty): 138364198
+  total terms: 411330032512
 
 metrics:
   - metric: MAP@100
@@ -46,29 +46,29 @@ topic_reader: TsvInt
 topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
 topics:
-  - name: "[MS MARCO V2 Doc: Dev](https://microsoft.github.io/msmarco/TREC-Deep-Learning.html)"
+  - name: "[MS MARCO V2 Passage: Dev](https://microsoft.github.io/msmarco/TREC-Deep-Learning.html)"
     id: dev
-    path: topics.msmarco-v2-doc.dev.unicoil-noexp.0shot.tsv.gz
-    qrel: qrels.msmarco-v2-doc.dev.txt
-  - name: "[MS MARCO V2 Doc: Dev](https://microsoft.github.io/msmarco/TREC-Deep-Learning.html)"
+    path: topics.msmarco-v2-passage.dev.unicoil-noexp.0shot.tsv.gz
+    qrel: qrels.msmarco-v2-passage.dev.txt
+  - name: "[MS MARCO V2 Passage: Dev](https://microsoft.github.io/msmarco/TREC-Deep-Learning.html)"
     id: dev2
-    path: topics.msmarco-v2-doc.dev2.unicoil-noexp.0shot.tsv.gz
-    qrel: qrels.msmarco-v2-doc.dev2.txt
+    path: topics.msmarco-v2-passage.dev2.unicoil-noexp.0shot.tsv.gz
+    qrel: qrels.msmarco-v2-passage.dev2.txt
 
 models:
   - name: unicoil-noexp-0shot
     display: uniCOIL (no expansion, zero-shot)
-    params: -impact -pretokenized -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+    params: -impact -pretokenized
     results:
       MAP@100:
-        - 0.2050
-        - 0.2082
+        - 0.1333
+        - 0.1374
       MRR@100:
-        - 0.2069
-        - 0.2098
+        - 0.1342
+        - 0.1385
       R@100:
-        - 0.7198
-        - 0.7266
+        - 0.4976
+        - 0.5217
       R@1000:
-        - 0.8854
-        - 0.8899
+        - 0.7010
+        - 0.7114
