--- a/src/main/resources/regression/msmarco-v2-doc-segmented-unicoil-0shot.yaml
+++ b/src/main/resources/regression/msmarco-v2-doc-segmented-unicoil-0shot.yaml
@@ -56,8 +56,8 @@ topics:
     qrel: qrels.msmarco-v2-doc.dev2.txt
 
 models:
-  - name: unicoil-noexp-0shot
-    display: uniCOIL (no expansion, zero-shot)
+  - name: unicoil-0shot
+    display: uniCOIL (zero-shot)
     params: -impact -pretokenized -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
       MAP@100:
